--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -15,6 +15,7 @@ set_real_ip_from 2001:41d0:601:1100::6f85;
 set_real_ip_from 2001:41d0:601:1100::71bb;
 set_real_ip_from 2001:41d0:700:10a2::;
 set_real_ip_from 2001:41d0:701:1000::5196;
+set_real_ip_from 2001:41d0:720:e300:25::;
 set_real_ip_from 2001:41d0:a:5c0::1;
 set_real_ip_from 2001:41d0:a:fe22::1;
 set_real_ip_from 2001:470:1:908::9001;
@@ -60,7 +61,6 @@ set_real_ip_from 2001:67c:e28:1::101;
 set_real_ip_from 2001:67c:e28:1::102;
 set_real_ip_from 2001:67c:e28:1::103;
 set_real_ip_from 2001:67c:e28:1::2;
-set_real_ip_from 2001:67c:e28:1::3;
 set_real_ip_from 2001:67c:e28:1::4;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:173;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:174;
@@ -424,7 +424,6 @@ set_real_ip_from 2a06:1700:1:108::b829:eee2;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
-set_real_ip_from 2a06:3000::10;
 set_real_ip_from 2a06:3000::30;
 set_real_ip_from 2a06:3000::40;
 set_real_ip_from 2a06:d380:0:103::62;
@@ -756,6 +755,5 @@ set_real_ip_from 2a12:a800:9:1:45:83:31:79;
 set_real_ip_from 2a12:a800:9:1:45:88:186:89;
 set_real_ip_from 2a12:a800:9:1:45:88:186:92;
 set_real_ip_from 2a14:1ec7:1000:a633::1;
-set_real_ip_from 2a14:7583:f607::;
 set_real_ip_from 2a14:c380:50:62::a;
 set_real_ip_from 2c0f:6c0:0:d::d28b;
