--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -648,6 +648,7 @@ set_real_ip_from 205.185.121.177;
 set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
 set_real_ip_from 206.166.251.193;
+set_real_ip_from 208.84.101.46;
 set_real_ip_from 209.141.32.181;
 set_real_ip_from 209.141.32.198;
 set_real_ip_from 209.141.34.15;
@@ -1046,6 +1047,7 @@ set_real_ip_from 77.48.28.204;
 set_real_ip_from 77.48.28.237;
 set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
+set_real_ip_from 77.90.6.154;
 set_real_ip_from 78.142.18.219;
 set_real_ip_from 78.159.131.103;
 set_real_ip_from 79.100.12.71;
