--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,6 +1,7 @@
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
+allow 102.211.56.20;
 allow 102.211.56.200;
 allow 103.109.101.105;
 allow 103.146.203.11;
@@ -118,7 +119,6 @@ allow 125.253.56.119;
 allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
-allow 130.193.15.79;
 allow 131.72.79.38;
 allow 136.244.111.163;
 allow 138.59.18.110;
@@ -782,7 +782,7 @@ allow 212.73.134.204;
 allow 212.95.50.77;
 allow 213.111.150.96;
 allow 216.239.90.19;
-allow 216.73.159.101;
+allow 216.73.159.75;
 allow 216.9.224.232;
 allow 217.12.221.131;
 allow 217.182.75.199;
@@ -1592,7 +1592,9 @@ allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a14:1ec7:1000:a633::1;
 allow 2a14:7583:f607::;
+allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:62::a;
+allow 2c0f:6c0:0:11::5e3d;
 allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
@@ -1863,6 +1865,7 @@ allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.222.33;
 allow 87.120.254.132;
+allow 87.121.79.55;
 allow 88.151.192.2;
 allow 88.80.20.86;
 allow 88.80.26.2;
