--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -766,5 +766,7 @@ allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a14:1ec7:1000:a633::1;
 allow 2a14:7583:f607::;
+allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:62::a;
+allow 2c0f:6c0:0:11::5e3d;
 allow 2c0f:6c0:0:d::d28b;
