--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -127,6 +127,7 @@ allow 139.99.8.57;
 allow 141.98.11.62;
 allow 143.20.64.235;
 allow 144.126.133.74;
+allow 144.172.73.31;
 allow 144.31.188.82;
 allow 146.59.126.232;
 allow 146.59.231.4;
@@ -560,8 +561,6 @@ allow 193.189.100.203;
 allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
-allow 193.237.155.109;
-allow 193.237.221.228;
 allow 193.239.232.102;
 allow 193.239.232.235;
 allow 193.26.115.123;
@@ -603,7 +602,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
 allow 196.251.69.116;
-allow 198.167.206.141;
+allow 198.167.206.210;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -644,6 +643,7 @@ allow 2001:41d0:601:1100::6f85;
 allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1000::5196;
+allow 2001:41d0:720:e300:25::;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
@@ -915,7 +915,6 @@ allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
-allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
@@ -1435,7 +1434,6 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
-allow 2a0c:9a40:8860:51::aa11;
 allow 2a0c:e300:b:b::b;
 allow 2a0d:6c2:6:615::;
 allow 2a0d:bbc7::f816:3eff:fe0b:181b;
@@ -1592,7 +1590,6 @@ allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a14:1ec7:1000:a633::1;
 allow 2a14:7583:f607::;
-allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:62::a;
 allow 2c0f:6c0:0:11::5e3d;
 allow 2c0f:6c0:0:d::d28b;
@@ -1853,7 +1850,6 @@ allow 84.19.182.20;
 allow 84.211.224.201;
 allow 84.239.46.144;
 allow 85.93.218.204;
-allow 85.93.31.31;
 allow 86.107.101.234;
 allow 86.54.24.21;
 allow 86.54.28.49;
@@ -1865,7 +1861,6 @@ allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.222.33;
 allow 87.120.254.132;
-allow 87.121.79.55;
 allow 88.151.192.2;
 allow 88.80.20.86;
 allow 88.80.26.2;
@@ -1917,7 +1912,6 @@ allow 94.102.51.15;
 allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.156.152.234;
-allow 94.156.152.8;
 allow 94.16.116.81;
 allow 94.16.121.91;
 allow 94.230.208.147;
