--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -15,6 +15,7 @@ allow 2001:41d0:601:1100::6f85;
 allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1000::5196;
+allow 2001:41d0:720:e300:25::;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
@@ -609,7 +610,6 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
-allow 2a0c:9a40:8860:51::aa11;
 allow 2a0c:e300:b:b::b;
 allow 2a0d:6c2:6:615::;
 allow 2a0d:bbc7::f816:3eff:fe0b:181b;
@@ -766,7 +766,6 @@ allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a14:1ec7:1000:a633::1;
 allow 2a14:7583:f607::;
-allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:62::a;
 allow 2c0f:6c0:0:11::5e3d;
 allow 2c0f:6c0:0:d::d28b;
