--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -80,7 +80,6 @@ set_real_ip_from 108.181.69.243;
 set_real_ip_from 108.59.12.41;
 set_real_ip_from 108.61.189.136;
 set_real_ip_from 109.169.33.163;
-set_real_ip_from 109.228.160.190;
 set_real_ip_from 109.237.27.11;
 set_real_ip_from 109.69.67.17;
 set_real_ip_from 109.70.100.1;
@@ -184,7 +183,6 @@ set_real_ip_from 172.105.20.12;
 set_real_ip_from 172.232.209.254;
 set_real_ip_from 172.233.82.41;
 set_real_ip_from 172.234.228.174;
-set_real_ip_from 172.236.179.103;
 set_real_ip_from 172.81.131.139;
 set_real_ip_from 172.81.131.156;
 set_real_ip_from 172.81.132.94;
@@ -195,7 +193,6 @@ set_real_ip_from 173.237.206.68;
 set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
-set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.65.134.4;
 set_real_ip_from 176.65.148.133;
@@ -561,6 +558,8 @@ set_real_ip_from 193.189.100.203;
 set_real_ip_from 193.189.100.204;
 set_real_ip_from 193.189.100.205;
 set_real_ip_from 193.189.100.206;
+set_real_ip_from 193.237.155.109;
+set_real_ip_from 193.237.221.228;
 set_real_ip_from 193.239.232.102;
 set_real_ip_from 193.239.232.235;
 set_real_ip_from 193.26.115.123;
@@ -914,12 +913,11 @@ set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
-set_real_ip_from 23.191.200.28;
+set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
-set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
@@ -950,7 +948,6 @@ set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
 set_real_ip_from 2600:3c04::f03c:95ff:fe41:d42c;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2600:3c0b::f03c:95ff:fefa:bdff;
-set_real_ip_from 2600:3c16::2000:eaff:fe85:3765;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:f6f6:2:2634::1;
 set_real_ip_from 2602:f6f6:2:3637::1;
@@ -1173,7 +1170,6 @@ set_real_ip_from 2a01:4f9:2b:75d::124:148;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
-set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
@@ -1225,7 +1221,6 @@ set_real_ip_from 2a04:52c0:101:46a::;
 set_real_ip_from 2a04:52c0:102:46e0::1;
 set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
-set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
@@ -1434,6 +1429,7 @@ set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:6a41:c13:1337::107;
+set_real_ip_from 2a0c:9a40:8860:51::aa11;
 set_real_ip_from 2a0c:e300:b:b::b;
 set_real_ip_from 2a0d:6c2:6:615::;
 set_real_ip_from 2a0d:bbc7::f816:3eff:fe0b:181b;
@@ -1767,7 +1763,6 @@ set_real_ip_from 5.255.97.221;
 set_real_ip_from 5.255.98.151;
 set_real_ip_from 5.255.98.198;
 set_real_ip_from 5.255.98.23;
-set_real_ip_from 5.255.99.124;
 set_real_ip_from 5.255.99.147;
 set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
@@ -1850,6 +1845,7 @@ set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.224.201;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 85.93.218.204;
+set_real_ip_from 85.93.31.31;
 set_real_ip_from 86.107.101.234;
 set_real_ip_from 86.54.24.21;
 set_real_ip_from 86.54.28.49;
@@ -1912,6 +1908,7 @@ set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
 set_real_ip_from 94.156.152.234;
+set_real_ip_from 94.156.152.8;
 set_real_ip_from 94.16.116.81;
 set_real_ip_from 94.16.121.91;
 set_real_ip_from 94.230.208.147;
