--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -80,6 +80,7 @@ set_real_ip_from 108.181.69.243;
 set_real_ip_from 108.59.12.41;
 set_real_ip_from 108.61.189.136;
 set_real_ip_from 109.169.33.163;
+set_real_ip_from 109.228.160.190;
 set_real_ip_from 109.237.27.11;
 set_real_ip_from 109.69.67.17;
 set_real_ip_from 109.70.100.1;
@@ -193,6 +194,7 @@ set_real_ip_from 173.237.206.68;
 set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
+set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.65.134.4;
 set_real_ip_from 176.65.148.133;
@@ -578,7 +580,6 @@ set_real_ip_from 194.26.192.77;
 set_real_ip_from 194.53.137.102;
 set_real_ip_from 194.53.137.156;
 set_real_ip_from 194.55.167.14;
-set_real_ip_from 194.87.55.98;
 set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
@@ -913,11 +914,13 @@ set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
+set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
+set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
@@ -1150,6 +1153,7 @@ set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 27.255.75.198;
 set_real_ip_from 2800:ba0:2:ee01::7583;
 set_real_ip_from 2800:ba0:6:c1::4858;
+set_real_ip_from 2803:6d90:111::67;
 set_real_ip_from 2803:cd80:2000:10::db8f:5f60;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
@@ -1170,6 +1174,7 @@ set_real_ip_from 2a01:4f9:2b:75d::124:148;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
+set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
@@ -1807,6 +1812,7 @@ set_real_ip_from 72.235.129.116;
 set_real_ip_from 72.5.43.62;
 set_real_ip_from 74.208.79.7;
 set_real_ip_from 74.82.47.194;
+set_real_ip_from 77.239.97.46;
 set_real_ip_from 77.48.28.193;
 set_real_ip_from 77.48.28.204;
 set_real_ip_from 77.48.28.237;
